// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots IKContext OverRidingUrlEndpoint 1`] = `
<img
  alt=""
  src="https://www.custom-domain.com/tr:h-300,w-400/default-image.jpg?ik-sdk-version=react-1.0.6"
/>
`;

exports[`Storyshots IKContext imageKitContext 1`] = `
<img
  alt=""
  src="https://ik.imagekit.io/your_imagekit_id/tr:h-300,w-400/default-image.jpg?ik-sdk-version=react-1.0.6"
/>
`;

exports[`Storyshots IKUpload imageKitUploadWithoutFileName 1`] = `
<input
  onChange={[Function]}
  type="file"
/>
`;

exports[`Storyshots IKUpload imageKitUploadwithAllTheProps 1`] = `
<input
  onChange={[Function]}
  type="file"
/>
`;

exports[`Storyshots IKUpload imageKitUploadwithAuthentication 1`] = `
<input
  onChange={[Function]}
  type="file"
/>
`;

exports[`Storyshots IKUpload imageKitUploadwithoutAuthentication 1`] = `
<input
  onChange={[Function]}
  type="file"
/>
`;

exports[`Storyshots Image imageUrlEndpointFail 1`] = `
<h1>
  Error: Missing urlEndpoint during initialization
</h1>
`;

exports[`Storyshots Image imageWithLQIPWithPathNoTransformation 1`] = `
<img
  alt=""
  id="lqip"
  src="https://ik.imagekit.io/your_imagekit_id/tr:q-20,bl-6/default-image.jpg?ik-sdk-version=react-1.0.6"
/>
`;

exports[`Storyshots Image imageWithLQIPWithPathWithTransformation 1`] = `
<img
  alt=""
  id="lqip"
  src="https://ik.imagekit.io/your_imagekit_id/tr:h-300,w-400:q-20,bl-6/default-image.jpg?ik-sdk-version=react-1.0.6"
/>
`;

exports[`Storyshots Image imageWithLQIPWithSrcNoTransformation 1`] = `
<img
  alt=""
  id="lqip"
  src="https://ik.imagekit.io/your_imagekit_id/default-image.jpg?ik-sdk-version=react-1.0.6&tr=q-20%2Cbl-6"
/>
`;

exports[`Storyshots Image imageWithLQIPWithSrcWithTransformation 1`] = `
<img
  alt=""
  id="lqip"
  src="https://ik.imagekit.io/your_imagekit_id/default-image.jpg?ik-sdk-version=react-1.0.6&tr=h-300%2Cw-400%3Aq-20%2Cbl-6"
/>
`;

exports[`Storyshots Image imageWithPath 1`] = `
<img
  alt=""
  src="https://ik.imagekit.io/your_imagekit_id/default-image.jpg?ik-sdk-version=react-1.0.6"
/>
`;

exports[`Storyshots Image imageWithQueryParameters 1`] = `
<img
  alt=""
  src="https://ik.imagekit.io/your_imagekit_id/default-image.jpg?ik-sdk-version=react-1.0.6&version=5&name=check"
/>
`;

exports[`Storyshots Image imageWithSrc 1`] = `
<img
  alt="abc"
  src="https://ik.imagekit.io/your_imagekit_id/default-image.jpg?ik-sdk-version=react-1.0.6"
/>
`;

exports[`Storyshots Image imageWithSrcQueryParameters 1`] = `
<img
  alt=""
  src="https://ik.imagekit.io/your_imagekit_id/default-image.jpg?foo=bar&ik-sdk-version=react-1.0.6&version=5&name=check"
/>
`;

exports[`Storyshots Image imageWithTransformations 1`] = `
<img
  alt=""
  src="https://ik.imagekit.io/your_imagekit_id/default-image.jpg?ik-sdk-version=react-1.0.6&tr=h-300%2Cw-400"
/>
`;

exports[`Storyshots Image leadingSlashesInPath 1`] = `
<img
  alt=""
  src="https://ik.imagekit.io/your_imagekit_id/default-image.jpg?ik-sdk-version=react-1.0.6"
/>
`;

exports[`Storyshots Image missingUrlEndpointFail 1`] = `
<h1>
  Error: Missing urlEndpoint during initialization
</h1>
`;

exports[`Storyshots Image nestedImagePathWithLQIP 1`] = `
<img
  alt=""
  id="lqip"
  src="https://ik.imagekit.io/your_imagekit_id/tr:h-300,w-400:q-50,bl-25/sample-folder/default-image.jpg?ik-sdk-version=react-1.0.6"
/>
`;

exports[`Storyshots Image trailingSlashesInUrlEndpoint 1`] = `
<img
  alt=""
  src="https://ik.imagekit.io/mindship/default-image.jpg?ik-sdk-version=react-1.0.6"
/>
`;

exports[`Storyshots Image-Transformation imageWithChainedTransformations 1`] = `
<img
  alt=""
  src="https://ik.imagekit.io/your_imagekit_id/tr:h-300,w-400:rt-90/default-image.jpg?ik-sdk-version=react-1.0.6"
/>
`;

exports[`Storyshots Image-Transformation imageWithNonExistingTransformation 1`] = `
<img
  alt=""
  src="https://ik.imagekit.io/your_imagekit_id/tr:foo-bar/default-image.jpg?ik-sdk-version=react-1.0.6"
/>
`;

exports[`Storyshots Image-Transformation imageWithNonExistingTransformationWithExistingTransformation 1`] = `
<img
  alt=""
  src="https://ik.imagekit.io/your_imagekit_id/tr:foo-bar,h-300/default-image.jpg?ik-sdk-version=react-1.0.6"
/>
`;

exports[`Storyshots Image-Transformation imageWithSingleTransformations 1`] = `
<img
  alt=""
  src="https://ik.imagekit.io/your_imagekit_id/tr:h-300,w-400/default-image.jpg?ik-sdk-version=react-1.0.6"
/>
`;

exports[`Storyshots Image-Transformation imageWithTransformationPositionAsPathPassingSrc 1`] = `
<img
  alt=""
  src="https://ik.imagekit.io/your_imagekit_id/default-image.jpg?ik-sdk-version=react-1.0.6&tr=h-300%2Cw-400"
/>
`;

exports[`Storyshots Image-Transformation imageWithTransformationPositionAsQuery 1`] = `
<img
  alt=""
  src="https://ik.imagekit.io/your_imagekit_id/default-image.jpg?ik-sdk-version=react-1.0.6&tr=h-300%2Cw-400"
/>
`;
